# ProgramowanieGierKomputerowych

./: .clang-format  .clangd  CMakeLists.txt  README.md
include/: AABB.hpp  Camera.hpp  Chunk.hpp  Cube.hpp  CubePalette.hpp  PerlinNoise.hpp  Ray.hpp  ShaderProgram.hpp  World.hpp
include/glad/: glad.h
src/: AABB.cpp  Camera.cpp  Cube.cpp  CubePalette.cpp  PerlinNoise.cpp  Ray.cpp  ShaderProgram.cpp  World.cpp  glad.c  main.cpp
task1/: CMakeLists.txt
task1/include/: Render.hpp  ShaderProgram.hpp
task1/include/glad/: glad.h
task1/src/: Render.cpp  ShaderProgram.cpp  glad.c  main.cpp
